apps/media/plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-plex
  namespace: media
spec:
  ports:
    - port: 32400
      protocol: TCP
      targetPort: http-plex
  selector:
    app: plex
