apps/media/plex/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media  
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: plex.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-plex
            port:
              number: 32400
